--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^7.4.1",
+    "@prisma/adapter-better-sqlite3": "^7.4.1",
+    "@prisma/adapter-mariadb": "^7.4.1",
+    "@prisma/adapter-planetscale": "^7.4.1",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.3.1",
     "passport": "^0.7.0",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@prisma/client": "^6.19.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
@@ -50,7 +53,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^7.4.1",
+    "prisma": "^6.19.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
